--- a/github_250116.md
+++ b/github_250116.md
@@ -96,7 +96,7 @@ AI 관련 저작권 이슈
 **절대 경로**: Root 디렉토리부터 목적 지점까지 거치는 모든 경로를 전부 작성한 것
 
 - ex) 윈도우 바탕화면의 절대 경로 예시
-- C:/User/ssafy/Desktop
+- C:/User/Desktop
 
 **상대 경로**: 현재 작업하고있는 디렉토리를 기준으로 계산된 상대적 위치를 작성한 것
 
